Mon Jan  8 00:52:51 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - autoconf: removed test for s6_addr32, added test for IN6_IS_ADDR_V4MAPPED.

Sun Jan  7 20:35:35 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/access.c: replaces previous patch (now uses IN6_IS_ADDR_V4MAPPED)

Sun Jan  7 19:28:57 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/access.c: s6_addr32 is not portable, only s6_addr is

Sun Jan  7 00:29:53 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - autoconf: added test for IPv6 prerequisites. New configuration
   options --with-ipv6, --without-ipv6.

Sat Jan  6 19:30:32 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>

 - autoconf: don't set LIB*_CFLAGS and LIB*_LDFLAGS to garbage values
   if the corresponding test fails.

Sat Jan  6 18:29:36 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - #ifdef'ed the new code that (presumably) adds IPv6 support (compile
   with -DHAVE_IPV6 to enable this), default to the old IPv4 only
   code (portability concerns of the IPv6 patch)

Sat Jan  6 02:35:33 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - removed the "sms", "ippon", "mustek", "fentonups", "esupssmart" and
   "blazer" drivers as they have been obsoleted by "megatec". This
   included their manpages, all references in Makefiles and all
   references in the documentation that only made sense if they were
   still available on the tree.

Fri Jan  5 19:57:46 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - added IPv6 support (Alioth Patches #304310) (IPv4 still seems to
   work after applying this patch, but can't test IPv6)

Fri Jan  5 19:15:13 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/cmdvartab: added ups.realpower, ups.realpower.nominal,
   input.frequency.low, input.frequency.high and battery.capacity

Fri Jan  4 10:13:05 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 * final removal of the legacy hidups driver. It is now fully