@@ -1,3 +1,7 @@
+Mon Jan  8 00:52:51 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>
+
+ - libhid.c: HIDDumpTree() also prints the data ReportID, Offset and Size.
+
 Mon Jan  8 00:52:51 UTC 2007 / Peter Selinger <selinger@users.sourceforge.net>
 
  - autoconf: removed test for s6_addr32, added test for IN6_IS_ADDR_V4MAPPED.
